data edits needed for modeling

--- a/scripts/feature_engineering/fe_functions.ipynb
+++ b/scripts/feature_engineering/fe_functions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,13 +74,18 @@
     "    \n",
     "    df1 = pd.merge(icu_full, mycounts_long, how='left', on='icustay_id')\n",
     "    analyticdf = pd.merge(df1, myproc_counts_long, how='left', on='icustay_id')\n",
-    "    \n",
+    "    # convert nas in specific columns to 0\n",
+    "    analyticdf[procedure_list] = analyticdf[procedure_list].fillna(0)\n",
+    "    analyticdf[drug_list] = analyticdf[drug_list].fillna(0)\n",
+    "    analyticdf = analyticdf.drop(columns=['subject_id', 'hadm_id', 'icustay_id','discharge_location'])\n",
+    "    # convert nas in specific columns in the outcome column\n",
+    "    analyticdf['hospital_expire_flag'] = analyticdf['hospital_expire_flag'].fillna(0)\n",
     "    return analyticdf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,27 +98,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# call data\n",
-    "testdat = feature_eng(admitdf, icudf, procdf, drugdf)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# convert nas in specific columns to 0\n",
-    "testdat[procedure_list] = testdat[procedure_list].fillna(0)\n",
-    "testdat[drug_list] = testdat[drug_list].fillna(0)\n",
-    "# drop columns\n",
-    "dat = testdat.drop(columns=['subject_id', 'hadm_id', 'icustay_id'])\n",
+    "testdat = feature_eng(admitdf, icudf, procdf, drugdf)\n",
     "####PICKLE THE DATA \n",
-    "#dat.to_pickle(\"../modeling/demo_training.pkl\") "
+    "#testdat.to_pickle(\"../modeling/demo_training.pkl\") "
    ]
   }
  ],
