--- a/scripts/modeling/baseline_modeling.ipynb
+++ b/scripts/modeling/baseline_modeling.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,12 +39,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "discharge_location  hospital_expire_flag\n",
+       "DEAD/EXPIRED        1.0                     46\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "X = df.drop(columns = ['discharge_location'])\n",
-    "y = df['discharge_location'] "
+    "X = df.drop(columns = ['hospital_expire_flag'])\n",
+    "y = df['hospital_expire_flag'] "
    ]
   },
   {
