adding more edits to FE and modeling

--- a/scripts/feature_engineering/fe_functions.ipynb
+++ b/scripts/feature_engineering/fe_functions.ipynb
@@ -38,7 +38,7 @@
     "    \"\"\"    \n",
     "    admit_fields = [\"subject_id\",\"hadm_id\", \"admission_type\", \"admission_location\", \n",
     "          \"discharge_location\", \"insurance\", \"diagnosis\", \"hospital_expire_flag\"]\n",
-    "    admitdf = pd.read_csv(admit, usecols = admit_fields)\n",
+    "    admitdf = pd.read_csv(admit, usecols = admit_fields)    \n",
     "    icu_fields =[\"subject_id\", \"hadm_id\", \"icustay_id\", \"first_careunit\", \"last_careunit\",\n",
     "        \"first_wardid\", \"last_wardid\", \"los\"]\n",
     "    icudf = pd.read_csv(icu, usecols = icu_fields)\n",
@@ -77,9 +77,28 @@
     "    # convert nas in specific columns to 0\n",
     "    analyticdf[procedure_list] = analyticdf[procedure_list].fillna(0)\n",
     "    analyticdf[drug_list] = analyticdf[drug_list].fillna(0)\n",
-    "    analyticdf = analyticdf.drop(columns=['subject_id', 'hadm_id', 'icustay_id','discharge_location'])\n",
+    "    analyticdf = analyticdf.drop(columns=['subject_id', 'hadm_id', 'icustay_id',\n",
+    "                                          'discharge_location', 'last_careunit',\n",
+    "                                         'last_wardid'])\n",
+    "    #categorize diagnoses\n",
+    "    analyticdf['diagnosis'] = np.where(analyticdf['diagnosis'].str.contains(\"congestive heart failure\", case=False), \"CV Failure\", \n",
+    "                                np.where(analyticdf['diagnosis'].str.contains(\"sepsis\", case=False), \"Sepsis\",\n",
+    "                                np.where(analyticdf['diagnosis'].str.contains(\"seizure\", case=False), \"CNS Failure\",\n",
+    "                                np.where(analyticdf['diagnosis'].str.contains(\"stroke\", case=False), \"CNS Failure\",\n",
+    "                                np.where(analyticdf['diagnosis'].str.contains(\"tia\", case=False), \"CNS Failure\",\n",
+    "                                np.where(analyticdf['diagnosis'].str.contains(\"ACUTE CHOLANGITIS\", case=False), \"Organ Failure\",\n",
+    "                                np.where(analyticdf['diagnosis'].str.contains(\"GI BLEED\", case=False), \"Organ Failure\",\n",
+    "                                np.where(analyticdf['diagnosis'].str.contains(\"lung failure\", case=False), \"Organ Failure\",\n",
+    "                                np.where(analyticdf['diagnosis'].str.contains(\"liver failure\", case=False), \"Organ Failure\",\n",
+    "                                np.where(analyticdf['diagnosis'].str.contains(\"MYOCARDIAL INFARCTION\", case=False), \"CV Failure\", \"Other\"))))))))))\n",
+    "    \n",
+    "    \n",
     "    # convert nas in specific columns in the outcome column\n",
     "    analyticdf['hospital_expire_flag'] = analyticdf['hospital_expire_flag'].fillna(0)\n",
+    "    #make wardID a categorical  \n",
+    "    to_categ = ['first_wardid','first_careunit','hospital_expire_flag',\n",
+    "                'admission_type','admission_location','insurance','diagnosis']\n",
+    "    analyticdf[to_categ] = analyticdf[to_categ].astype('category')\n",
     "    return analyticdf"
    ]
   },
