--- a/scripts/feature_engineering/fe_functions.ipynb
+++ b/scripts/feature_engineering/fe_functions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,9 +92,12 @@
     "                                np.where(analyticdf['diagnosis'].str.contains(\"liver failure\", case=False), \"Organ Failure\",\n",
     "                                np.where(analyticdf['diagnosis'].str.contains(\"MYOCARDIAL INFARCTION\", case=False), \"CV Failure\", \"Other\"))))))))))\n",
     "    \n",
-    "    \n",
-    "    # convert nas in specific columns in the outcome column\n",
+    "    # convert nas in the outcome column to 0\n",
     "    analyticdf['hospital_expire_flag'] = analyticdf['hospital_expire_flag'].fillna(0)\n",
+    "    \n",
+    "    # convert nas in remaining columns to \"other\"\n",
+    "    analyticdf = analyticdf.fillna(\"Other\")\n",
+    "    \n",
     "    #make wardID a categorical  \n",
     "    to_categ = ['first_wardid','first_careunit','hospital_expire_flag',\n",
     "                'admission_type','admission_location','insurance','diagnosis']\n",
@@ -104,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
