selecting top 2 wards

--- a/scripts/feature_engineering/fe_functions.ipynb
+++ b/scripts/feature_engineering/fe_functions.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,16 +98,21 @@
     "    # convert nas in remaining columns to \"other\"\n",
     "    analyticdf = analyticdf.fillna(\"Other\")\n",
     "    \n",
-    "    #make wardID a categorical  \n",
+    "    # make categorical vars categorical  \n",
     "    to_categ = ['first_wardid','first_careunit','hospital_expire_flag',\n",
     "                'admission_type','admission_location','insurance','diagnosis']\n",
+    "    \n",
+    "    # select top 2 ward ids by number of deaths\n",
+    "    analyticdf['first_wardid'] = np.where(analyticdf['first_wardid']==52, \"52\",\n",
+    "                                   np.where(analyticdf['first_wardid'] == 23, \"23\", \"Other\"))\n",
+    "    \n",
     "    analyticdf[to_categ] = analyticdf[to_categ].astype('category')\n",
     "    return analyticdf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
