modeling edits. addition of RF and xgb

--- a/scripts/modeling/baseline_modeling.ipynb
+++ b/scripts/modeling/baseline_modeling.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,12 +24,14 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.neural_network import MLPClassifier"
+    "from sklearn.neural_network import MLPClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from xgboost import XGBClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,36 +41,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['los', 'ACET325', 'CALG1I', 'D5W1000', 'D5W250', 'FURO40I', 'HEPA5I',\n",
-       "       'INSULIN', 'KCL20P', 'KCL20PM', 'KCLBASE2', 'LR1000', 'MAG2PM',\n",
-       "       'METO25', 'MORP2I', 'NACLFLUSH', 'NS1000', 'NS250', 'NS500', 'VANC1F',\n",
-       "       'VANCOBASE', 'Dialysis', 'Imaging', 'Intubation/Extubation',\n",
-       "       'Invasive Lines', 'Peripheral Lines', 'Procedures',\n",
-       "       'Significant Events', 'Ventilation', 'first_wardid_52',\n",
-       "       'first_wardid_Other', 'first_careunit_CSRU', 'first_careunit_MICU',\n",
-       "       'first_careunit_SICU', 'first_careunit_TSICU',\n",
-       "       'hospital_expire_flag_1.0', 'admission_type_Other',\n",
-       "       'admission_type_URGENT', 'admission_location_EMERGENCY ROOM ADMIT',\n",
-       "       'admission_location_Other',\n",
-       "       'admission_location_PHYS REFERRAL/NORMAL DELI',\n",
-       "       'admission_location_TRANSFER FROM HOSP/EXTRAM', 'insurance_Medicaid',\n",
-       "       'insurance_Medicare', 'insurance_Other', 'insurance_Private',\n",
-       "       'diagnosis_CV Failure', 'diagnosis_Organ Failure', 'diagnosis_Other',\n",
-       "       'diagnosis_Sepsis'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cat_vars = df[['first_wardid','first_careunit','hospital_expire_flag',\n",
     "                'admission_type','admission_location','insurance','diagnosis']]\n",
@@ -77,13 +52,12 @@
     "\n",
     "df = df.drop(['first_wardid','first_careunit','hospital_expire_flag',\n",
     "                'admission_type','admission_location','insurance','diagnosis'], axis=1)\n",
-    "df = pd.concat([df, cat_dummies], axis=1)\n",
-    "df.columns"
+    "df = pd.concat([df, cat_dummies], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +98,7 @@
        "Name: hospital_expire_flag_1.0, dtype: float64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,12 +119,14 @@
     "    lr = LogisticRegression(),\n",
     "    svc = SVC(),\n",
     "    nn = MLPClassifier(max_iter=500),\n",
+    "    clf=RandomForestClassifier(n_estimators=100),\n",
+    "    xgb = XGBClassifier()\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +137,9 @@
       "knn: 0.971\n",
       "lr: 1.000\n",
       "svc: 0.971\n",
-      "nn: 1.000\n"
+      "nn: 1.000\n",
+      "clf: 1.000\n",
+      "xgb: 1.000\n"
      ]
     }
    ],
