add changes to merged data

--- a/scripts/feature_engineering/fe_functions.ipynb
+++ b/scripts/feature_engineering/fe_functions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,8 +43,8 @@
     "        \"first_wardid\", \"last_wardid\", \"los\"]\n",
     "    icudf = pd.read_csv(icu, usecols = icu_fields)\n",
     "    \n",
-    "    deaths = admitdf[admitdf['discharge_location'].isin(['DEAD/EXPIRED'])]\n",
-    "    icu_admin = pd.merge(icudf, deaths, how='left', on='hadm_id')\n",
+    "    # deaths = admitdf[admitdf['discharge_location'].isin(['DEAD/EXPIRED'])]\n",
+    "    icu_admin = pd.merge(icudf, admitdf, how='left', on='hadm_id')\n",
     "\n",
     "    icu_full = (\n",
     "                icu_admin.\n",
@@ -95,6 +95,9 @@
     "    # convert nas in the outcome column to 0\n",
     "    analyticdf['hospital_expire_flag'] = analyticdf['hospital_expire_flag'].fillna(0)\n",
     "    \n",
+    "    # convert government insurance to other\n",
+    "    analyticdf = analyticdf.replace({'insurance': 'Government'}, 'Other')\n",
+    "    \n",
     "    # convert nas in remaining columns to \"other\"\n",
     "    analyticdf = analyticdf.fillna(\"Other\")\n",
     "    \n",
@@ -112,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
