--- a/scripts/modeling/baseline_modeling.ipynb
+++ b/scripts/modeling/baseline_modeling.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,42 +125,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# sl_modles = dict(\n",
-    "#     dummy = DummyClassifier(strategy='prior'),\n",
-    "#     knn = KNeighborsClassifier(),\n",
-    "#     lr = LogisticRegression(),\n",
-    "#     svc = SVC(),\n",
-    "#     nn = MLPClassifier(max_iter=500),\n",
-    "#     dtree = DecisionTreeClassifier(),\n",
-    "#     rf=RandomForestClassifier(n_estimators=100),\n",
-    "#     xgb = XGBClassifier(), \n",
-    "# )\n",
-    "\n",
-    "# for name, clf in sl_modles.items():\n",
-    "#     clf.fit(X_train, y_train)\n",
-    "#     score = clf.score(X_test, y_test)\n",
-    "#     print(f'{name}: {score:.3f}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DummyClassifier        AUC:0.506 STD: 0.15\n",
+      "DummyClassifier        AUC:0.497 STD: 0.15\n",
       "LogisticRegression     AUC:0.700 STD: 0.22\n",
-      "DecisionTreeClassifier AUC:0.624 STD: 0.15\n",
+      "DecisionTreeClassifier AUC:0.597 STD: 0.14\n",
       "KNeighborsClassifier   AUC:0.640 STD: 0.21\n",
       "SVC                    AUC:0.714 STD: 0.17\n",
-      "RandomForestClassifier AUC:0.747 STD: 0.15\n",
+      "RandomForestClassifier AUC:0.762 STD: 0.14\n",
       "XGBRFClassifier        AUC:0.738 STD: 0.15\n",
       "CatBoostClassifier     AUC:0.749 STD: 0.20\n"
      ]
@@ -196,13 +173,12 @@
     "    print(\n",
     "        f'{model.__name__:22} AUC:'\n",
     "        f'{s.mean():.3f} STD: {s.std():.2f}'\n",
-    "        f'{}\n",
     "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +207,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "StackingClassifier     AUC:0.695 STD: 0.17\n"
+      "StackingClassifier     AUC:0.710 STD: 0.16\n"
      ]
     }
    ],
@@ -260,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +314,7 @@
        "<AxesSubplot:title={'center':'Learning Curve for XGBRFClassifier'}, xlabel='Training Instances', ylabel='Score'>"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -380,17 +356,33 @@
        "0.7647058823529411"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# model deployment\n",
+    "# model deployment and save as pickle file\n",
     "import joblib\n",
     "joblib.dump(clf_best, 'clf_best.pickle')\n",
     "clf = joblib.load('clf_best.pickle')\n",
     "clf.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# the best model was random forest\n",
+    "# rerun this model and make a prediction on one row to see the output\n",
+    "\n",
+    "# clf=RandomForestClassifier(n_estimators=100)\n",
+    "# clf.fit(X_train,y_train)\n",
+    "# y_pred=clf.predict(X_test)\n",
+    "# one_row = X_test.loc[0, :].values.tolist()\n",
+    "# clf.predict([one_row])"
    ]
   }
  ],
