--- a/scripts/feature_engineering/fe_functions.ipynb
+++ b/scripts/feature_engineering/fe_functions.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import pickle"
+    "import pickle\n",
+    "import sqlite3"
    ]
   },
   {
@@ -26,7 +27,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "con = sqlite3.connect('MIMIC3_full.db')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "admitdf = pd.read_sql('select * from admission', con)\n",
+    "icudf =  pd.read_sql('select * from icu', con)\n",
+    "procdf = pd.read_sql('select * from procedure', con)\n",
+    "drugdf = pd.read_sql('select * from prescription', con)\n",
+    "con.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "admitdf.columns = admitdf.columns.str.lower()\n",
+    "icudf.columns = icudf.columns.str.lower()\n",
+    "procdf.columns = procdf.columns.str.lower()\n",
+    "drugdf.columns = drugdf.columns.str.lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,10 +73,10 @@
     "    \"\"\"    \n",
     "    admit_fields = [\"subject_id\",\"hadm_id\", \"admission_type\", \"admission_location\", \n",
     "          \"discharge_location\", \"insurance\", \"diagnosis\", \"hospital_expire_flag\"]\n",
-    "    admitdf = pd.read_csv(admit, usecols = admit_fields)    \n",
+    "    admitdf = admit[admit_fields]    \n",
     "    icu_fields =[\"subject_id\", \"hadm_id\", \"icustay_id\", \"first_careunit\", \"last_careunit\",\n",
     "        \"first_wardid\", \"last_wardid\", \"los\"]\n",
-    "    icudf = pd.read_csv(icu, usecols = icu_fields)\n",
+    "    icudf = icu[icu_fields]\n",
     "    \n",
     "    # deaths = admitdf[admitdf['discharge_location'].isin(['DEAD/EXPIRED'])]\n",
     "    icu_admin = pd.merge(icudf, admitdf, how='left', on='hadm_id')\n",
@@ -52,7 +87,7 @@
     "                rename(columns={\"subject_id_x\": \"subject_id\"})\n",
     "    )\n",
     "    \n",
-    "    procdf = pd.read_csv(proc)\n",
+    "    procdf = proc\n",
     "    procdf = procdf[procdf['ordercategoryname'].isin(procedure_list)].reset_index()\n",
     "    procdf = procdf[procdf['icustay_id'].notna()]\n",
     "    myproc_counts = procdf.groupby(['subject_id', 'icustay_id', 'ordercategoryname']).size().reset_index(name='counts')\n",
@@ -62,7 +97,7 @@
     "    myproc_counts_long = myproc_counts_long.replace(np.nan,0)\n",
     "    myproc_counts_long = myproc_counts_long.rename_axis(None).drop(columns=['subject_id'])\n",
     "\n",
-    "    drugdf = pd.read_csv(drug)\n",
+    "    drugdf = drug\n",
     "    #filter rows to only these drugs\n",
     "    drugdf = drugdf[drugdf['formulary_drug_cd'].isin(drug_list)].reset_index()\n",
     "    drugdf = drugdf[drugdf['icustay_id'].notna()]\n",
@@ -120,28 +155,28 @@
    "outputs": [],
    "source": [
     "# data files\n",
-    "procdf = \"https://physionet.org/files/mimiciii-demo/1.4/PROCEDUREEVENTS_MV.csv?download\"\n",
-    "drugdf = \"https://physionet.org/files/mimiciii-demo/1.4/PRESCRIPTIONS.csv?download\"\n",
-    "admitdf = \"https://physionet.org/files/mimiciii-demo/1.4/ADMISSIONS.csv?download\"\n",
-    "icudf = \"https://physionet.org/files/mimiciii-demo/1.4/ICUSTAYS.csv?download\""
+    "# procdf = \"https://physionet.org/files/mimiciii-demo/1.4/PROCEDUREEVENTS_MV.csv?download\"\n",
+    "# drugdf = \"https://physionet.org/files/mimiciii-demo/1.4/PRESCRIPTIONS.csv?download\"\n",
+    "# admitdf = \"https://physionet.org/files/mimiciii-demo/1.4/ADMISSIONS.csv?download\"\n",
+    "# icudf = \"https://physionet.org/files/mimiciii-demo/1.4/ICUSTAYS.csv?download\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# call data\n",
     "testdat = feature_eng(admitdf, icudf, procdf, drugdf)\n",
     "####PICKLE THE DATA \n",
-    "#testdat.to_pickle(\"../modeling/demo_training.pkl\") "
+    "testdat.to_pickle(\"../modeling/full_training.pkl\") "
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -155,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
