--- a/scripts/dashboard/dashboard_sandbox.ipynb
+++ b/scripts/dashboard/dashboard_sandbox.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -39,20 +39,23 @@
     {
      "data": {
       "text/plain": [
-       "Medicare    105\n",
-       "Private      24\n",
-       "Medicaid      6\n",
-       "Other         1\n",
-       "Name: insurance, dtype: int64"
+       "Index(['first_careunit', 'first_wardid', 'Length of Stay', 'admission_type',\n",
+       "       'admission_location', 'insurance', 'diagnosis', 'Death', 'ACET325',\n",
+       "       'CALG1I', 'D5W1000', 'D5W250', 'FURO40I', 'HEPA5I', 'INSULIN', 'KCL20P',\n",
+       "       'KCL20PM', 'KCLBASE2', 'LR1000', 'MAG2PM', 'METO25', 'MORP2I',\n",
+       "       'NACLFLUSH', 'NS1000', 'NS250', 'NS500', 'VANC1F', 'VANCOBASE',\n",
+       "       'Dialysis', 'Imaging', 'Intubation/Extubation', 'Invasive Lines',\n",
+       "       'Peripheral Lines', 'Procedures', 'Significant Events', 'Ventilation'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.insurance.value_counts()"
+    "df.columns"
    ]
   },
   {
