comments for feature engineering sandbox adds

--- a/scripts/feature_engineering/fe_01.ipynb
+++ b/scripts/feature_engineering/fe_01.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This script is a sandbox for feature engineering.  \n",
+    "A function is later written in the script, \"fe_functions.ipynb\" that utilizes this code.  \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -18,6 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#connect to the MIMIC DEMO data. \n",
     "con = sqlite3.connect('MIMIC3_full.db')"
    ]
   },
@@ -27,6 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#admissions table\n",
     "admitdf = pd.read_sql('select * from admission', con)"
    ]
   },
@@ -36,6 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#icu table\n",
     "icudf =  pd.read_sql('select * from icu', con)"
    ]
   },
@@ -45,6 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#procedures table\n",
     "procdf = pd.read_sql('select * from procedure', con)"
    ]
   },
@@ -54,6 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#prescriptions table\n",
     "drugdf = pd.read_sql('select * from prescription', con)"
    ]
   },
@@ -63,6 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#close the connection\n",
     "con.close()"
    ]
   },
@@ -72,6 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#lower case the columns\n",
     "admitdf.columns = admitdf.columns.str.lower()"
    ]
   },
@@ -100,6 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#ensure that we are selecting only our columns of interest.\n",
     "fields = [\"subject_id\",\"hadm_id\",\"deathtime\", \"admission_type\", \"admission_location\", \n",
     "          \"discharge_location\", \"insurance\", \"diagnosis\", \"hospital_expire_flag\"]\n",
     "admitdf = admitdf[fields]"
@@ -432,10 +448,12 @@
     }
    ],
    "source": [
+    "#first, identify those invididuals who died during their hospital/ICU stay\n",
     "deaths = admitdf[admitdf['discharge_location'].isin(['DEAD/EXPIRED'])]\n",
+    "#merge the outcome onto the ICU base dataframe via a left merge\n",
     "icu_admin = pd.merge(icudf, deaths, how='left', on='hadm_id')\n",
     "icu_admin['discharge_location'].value_counts()\n",
-    "\n",
+    "#make the df look nice\n",
     "icu_full = (\n",
     "            icu_admin.\n",
     "            drop(columns=['subject_id_y']).\n",
@@ -583,22 +601,26 @@
    ],
    "source": [
     "#procdf = pd.read_csv(\"https://physionet.org/files/mimiciii-demo/1.4/PROCEDUREEVENTS_MV.csv?download\")\n",
+    "#take the top eight procedures from the demo data \n",
     "topprocs = procdf['ordercategoryname'].value_counts().head(8).index.tolist()\n",
+    "#filter the data to only those from the top eight procedures\n",
     "procdf = procdf[procdf['ordercategoryname'].isin(topprocs)].reset_index()\n",
+    "#remove NAs\n",
     "procdf = procdf[procdf['icustay_id'].notna()]\n",
+    "#create a count dataframe that will later be merged\n",
     "myproc_counts = procdf.groupby(['subject_id', 'icustay_id', 'ordercategoryname']).size().reset_index(name='counts')\n",
     "myproc_counts_long = myproc_counts.pivot(index = ['subject_id','icustay_id'], \n",
     "                                         columns = 'ordercategoryname',\n",
     "                                         values = 'counts').reset_index()\n",
-    "#.reset_index()\n",
+    "#repalce the NAs with 0s\n",
     "myproc_counts_long = myproc_counts_long.replace(np.nan,0)\n",
     "#myproc_counts_long = myproc_counts_long.reset_index(drop=True, inplace=True)\n",
     "myproc_counts_long = myproc_counts_long.rename_axis(None).drop(columns=['subject_id'])\n",
-    "\n",
+    "#place the columns into a list for later use\n",
     "procedure_columns = ['Dialysis', 'Imaging', 'Intubation/Extubation',\n",
     "       'Invasive Lines', 'Peripheral Lines', 'Procedures',\n",
     "       'Significant Events', 'Ventilation']\n",
-    "\n",
+    "#pickle the data in a crosstable for later uses\n",
     "with open(\"../../crosstables/procedure_list.txt\", \"wb\") as fp:   #Pickling\n",
     "    pickle.dump(procedure_columns, fp)\n",
     "myproc_counts_long.head()"
@@ -838,6 +860,7 @@
     "       'HEPA5I', 'INSULIN', 'KCL20P', 'KCL20PM', 'KCLBASE2', 'LR1000',\n",
     "       'MAG2PM', 'METO25', 'MORP2I', 'NACLFLUSH', 'NS1000', 'NS250', 'NS500',\n",
     "       'VANC1F', 'VANCOBASE']\n",
+    "#pickle the data for later uses into the crosstables folder\n",
     "with open(\"../../crosstables/prescription_list.txt\", \"wb\") as dl:   #Pickling\n",
     "    pickle.dump(prescription_list, dl)\n",
     "mycounts_long.head()"
@@ -1244,7 +1267,9 @@
     }
    ],
    "source": [
+    "#merge the counts data for final analysis\n",
     "df1 = pd.merge(icu_full, mycounts_long, how='left', on='icustay_id')\n",
+    "#merge again for procedures to the final analytic dataset \n",
     "analyticdf = pd.merge(df1, myproc_counts_long, how='left', on='icustay_id')\n",
     "analyticdf"
    ]
@@ -1252,7 +1277,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1266,7 +1291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
