commenting the db notebook

--- a/scripts/feature_engineering/db_read.ipynb
+++ b/scripts/feature_engineering/db_read.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Leverage SQLite3 DBs to store large data tables from MIMIC"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,29 +19,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#connect to the DB via sqlite3\n",
     "con = sqlite3.connect('MIMIC3.db')\n",
     "cur = con.cursor()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#query the admissions table\n",
     "query = 'select * from admission'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#try a test query that will be used later - fetchall\n",
     "cur.execute(query)\n",
     "df = pd.DataFrame(cur.fetchall())"
    ]
