commenting the dashboard sandbox for later users

--- a/scripts/dashboard/dashboard_sandbox.ipynb
+++ b/scripts/dashboard/dashboard_sandbox.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is a sandbox for the streamlit dashboard app.  \n",
+    "We perform EDA, data preparation, and modeling that we will eventually show in the streamlit app. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -24,7 +32,7 @@
     "df = df.rename(columns={'hospital_expire_flag': 'Death',\n",
     "                       'los': 'Length of Stay'})\n",
     "\n",
-    "\n",
+    "#change the output for the dashboard to look nice\n",
     "df['Death'] = np.where(df['Death']==0, \"Not Dead\",\n",
     "                                   np.where(df['Death'] == 1, \"Dead\", \"Other\"))"
    ]
@@ -33,7 +41,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -55,7 +63,14 @@
     }
    ],
    "source": [
-    "df.columns"
+    "df.columns #ensure the columns are correct"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Continuous Variable Exploration"
    ]
   },
   {
@@ -1326,17 +1341,18 @@
    "source": [
     "#Change 'Length of Stay' to Other all other continuous variables\n",
     "contvar = \"Length of Stay\"\n",
-    "\n",
+    "#histogram for px - interactivity added\n",
     "fig_cont = px.histogram(df, x=contvar, color=\"Death\", marginal=\"box\",\n",
     "                       title= str(contvar) + str(': Histogram and Boxplot by Death Status'))\n",
-    "fig_cont.show()\n",
-    "#consider doing t-test?"
+    "fig_cont.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 52,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1412,7 +1428,14 @@
    ],
    "source": [
     "cont_summary = df.groupby(\"Death\")[contvar].describe().reset_index()\n",
-    "cont_summary "
+    "cont_summary #summary statistics that may be used"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Categorical Variable Exploration"
    ]
   },
   {
@@ -2328,7 +2351,9 @@
    ],
    "source": [
     "categ_var = 'insurance'\n",
+    "#try all variables - but first try 'insurance' as a proof of concept\n",
     "categ_counts = df.groupby(['Death',categ_var]).size().reset_index(name='counts')\n",
+    "#create a go barplot stratified by death status\n",
     "barfig = go.Figure(data=[\n",
     "    go.Bar(name='Not Dead',     \n",
     "           x = categ_counts[categ_counts['Death'] == \"Not Dead\" ][categ_var],\n",
@@ -2410,15 +2435,8 @@
    ],
    "source": [
     "categ_summary = df.groupby(\"Death\")[categ_var].describe().reset_index()\n",
-    "categ_summary "
+    "categ_summary #more summary statistics of the categorical variables"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
